# pyvkpns

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
src/: client.py  http_client.py
src/message/: model.py  preparer.py
src/pyvkpns/: http_client.py
src/pyvkpns/message/: preparer.py
src/utils/: empty_remover.py  none_remover.py
src/validator/: response_validator.py
tests/convert_empty/: test_convert_empty.py
tests/http_client/: test_http_client.py
tests/message/: test_message_preparer.py
tests/none_remover/: test_none_remover.py
tests/utils/: __init__.py  assert_none.py
tests/vkpns_client/: test_vkpns_client.py
