[metadata]
name = pyvkpns
version = 0.1.0
description = Rustore Push API client
long_description = file: README.md
long_description_content_type = text/markdown
author = Timofei Ivankov
author_email = your.email@example.com
url = https://github.com/deadlovelll/pyvkpns
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
